[package]
authors = ["Jacob Mischka <jacob@mischka.me>"]
name = "aqi-nacor-schema"
edition = "2018"
description = "Rust structs that adhere to AQI's NACOR XML schema"
repository = "https://github.com/jacobmischka/aqi-nacor-schema"
version = "2.2.1"
license = "MIT"
keywords = ["aqi", "nacor", "qcdr", "anesthesia", "anesthesiology"]

[dependencies]
chrono = "0.4.0"
lazy_static = "0.2.8"
regex = "0.2.2"
xml-rs = "0.6.0"
